# permutation-fair-dice

./: Cargo.toml  README.md  fairdice.ipynb
src/: dice_tuple.rs  fdts.rs  fdts_combine.rs  lib.rs  main.rs  mapped_fdts.rs  permutations.rs
