[package]
edition = "2018"
name = "fairdice"
version = "0.1.0"

[lib]
name = "fairdice"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
env_logger = "^0.9"
itertools = "^0.10"
log = "^0.4"
rayon = "^1.5"
smallvec = {version = "^1.7", features = ["union", "const_generics"]}
indicatif = {version = "*", features = ["rayon"]}
rustc-hash = "*"
